# llama2.c

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  run.c
include/: matvecmul.h
logs/: matmul_dim_110m.txt  matmul_dim_15m.txt  matmul_dim_42m.txt
src/: basic_types.h  matvecmul.c  matvecmul_avx2.c  matvecmul_common.c  matvecmul_neon.c  matvecmul_neon64.c  matvecmul_row.h
